local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: debugmate-ingress
  namespace: debugmate-local
spec:
  ingressClassName: nginx
  rules:
    - host: debugmate.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: debugmate-api
                port:
                  number: 8000
